deployment/gke/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trading
  labels:
    app: markettool
    environment: production
