deployment/gke/manifests/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: markettool
  namespace: trading
  labels:
    app: markettool
spec:
  type: LoadBalancer
  selector:
    app: markettool
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
