deployment/gke/manifests/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: markettool-ingress
  namespace: trading
  labels:
    app: markettool
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: markettool-ip
    networking.gke.io/managed-certificates: markettool-cert
    networking.gke.io/v1beta1.FrontendConfig: markettool-frontend-config
spec:
  rules:
  - host: trading.libertex.dev
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: markettool
            port:
              number: 80
  - host: api.trading.libertex.dev
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: markettool
            port:
              number: 80
